<resources>
    <string name="app_name">Home Workout App</string>
    <string name="start_image">Start image</string>
    <string name="start">START</string>
    <string name="bmi">BMI</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="image">Exercise Image</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE :</string>
    <string name="exercisename">ExerciseName</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="_1">1</string>
    <string name="this_will_end_the_workout_you_have_got_far_are_you_really_sure_you_want_to_go_back">This will end the workout! You have got far, Are you really sure you want to quit.</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="finish">Finish</string>
    <string name="weight_in_kg">Weight (In kg)</string>
    <string name="weight_in_pounds">Weight (In pounds)</string>
    <string name="height_in_cm">Height (In cm)</string>
    <string name="feet">Feet</string>
    <string name="inch">Inch</string>
    <string name="your_bmi">Your BMI</string>
    <string name="calculate">CALCULATE</string>
    <string name="metric_unit">METRIC UNIT</string>
    <string name="us_unit">US UNIT</string>
</resources>